# xarray_fmrc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  pre-commit.yml
tests/test_example/: test_hello.py
xarray_fmrc/: __init__.py  accessor.py  build_datatree.py  constants.py  example.py  forecast_offsets.py  forecast_reference_time.py
